Try and fix drop shadow on mobile

--- a/shows/static/shows/css/style.css
+++ b/shows/static/shows/css/style.css
@@ -645,6 +645,7 @@ iframe {
   height: 50px;
   padding-left: 20px;
   box-shadow: none !important;
+  -webkit-appearance: none !important;
 }
 
 .input-subscribe:focus {
